src/objects/Component_Movement_Table__c.object
<CustomObject>
    <description>All transactions related to movement of stocks between Stock Points</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Components Movement Table</relationshipLabel>
        <relationshipName>Components_Movement_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_1__c</fullName>
        <formula>IF( 
ISPICKVAL( Type_of_Receipt__c , &quot;Purchase&quot;) , Quantity__c * Purchase_Rate_Unit_1__c , Quantity__c * Stock_Transfer_Price_Unit_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_2__c</fullName>
        <formula>IF( 
ISPICKVAL( Type_of_Receipt__c , &quot;Purchase&quot;) ,  Quantity_2__c  *  Purchase_Rate_Unit_2__c  ,  Quantity_2__c *  Stock_Transfer_Price_Unit_2__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_3__c</fullName>
        <formula>IF( 
ISPICKVAL( Type_of_Receipt__c , &quot;Purchase&quot;) ,  Quantity_3__c  *  Purchase_Rate_Unit_3__c , Quantity_3__c  *  Stock_Transfer_Price_Unit_3__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Basic__c</fullName>
        <label>Basic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Location_Type__c</fullName>
        <label>Branch Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>Interstate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within State</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CST_No__c</fullName>
        <formula>CreatedBy.CST_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CST No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Challan_No_Trig__c</fullName>
        <label>Challan No Trig</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Challan_No__c</fullName>
        <externalId>true</externalId>
        <label>Challan No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Code_2__c</fullName>
        <formula>Select_Component_2__r.Product_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Component Code 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Code_3__c</fullName>
        <formula>Select_Component_3__r.Product_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Component Code 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Code_4__c</fullName>
        <formula>Select_Component_4__r.Product_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Component Code 4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Code__c</fullName>
        <formula>Select_Component__r.Product_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Component Code 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Status__c</fullName>
        <label>Component Status</label>
        <picklist>
            <picklistValues>
                <fullName>Usable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Defective</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_By_Stock_Point__c</fullName>
        <label>Created By Stock Point</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Defective_Amount1__c</fullName>
        <formula>Defective_Quantity1__c  *  Stock_Transfer_Price_Unit_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defective Amount1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Defective_Amount2__c</fullName>
        <formula>Defective_Quantity2__c * Stock_Transfer_Price_Unit_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defective Amount2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Defective_Amount3__c</fullName>
        <formula>Defective_Quantity3__c * Stock_Transfer_Price_Unit_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defective Amount3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Defective_Item_Returned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Defective Item Returned</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Components Movement Table</relationshipLabel>
        <relationshipName>Components_Movement_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Defective_Item_is_different__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Defective Item is different</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Defective_Product_Serial_No_if_FG__c</fullName>
        <label>Replaced Battery Serial No.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defective_Quantity1__c</fullName>
        <label>Defective Quantity1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Defective_Quantity2__c</fullName>
        <label>Defective Quantity2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Defective_Quantity3__c</fullName>
        <label>Defective Quantity3</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Defective_Quantity_Returned__c</fullName>
        <label>Defective Quantity Returned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Destination_Branch__c</fullName>
        <formula>Transferred_to_Stock_Point__r.Related_To_Branch__r.Service_Center_Location_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_State__c</fullName>
        <formula>Transferred_to_Stock_Point__r.Related_To_Branch__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <formula>(Amount_1__c + Amount_2__c + Amount_3__c + Amount_4__c)* Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_in_component_charge__c</fullName>
        <label>Discount%</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dispatched_Through__c</fullName>
        <label>Dispatched Through</label>
        <picklist>
            <picklistValues>
                <fullName>By Hand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>By Courier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Invoice_No__c</fullName>
        <label>Document / Invoice No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Date__c</fullName>
        <formula>TEXT( DAY(  Date__c ) ) + &apos;-&apos; +  

        CASE( MONTH( Date__c  ) , 
                   1, &apos;JAN&apos;, 
                   2, &apos;FEB&apos;,
                   3, &apos;MAR&apos;, 
                   4, &apos;APR&apos;,
                   5, &apos;MAY&apos;, 
                   6, &apos;JUN&apos;, 
                   7, &apos;JUL&apos;, 
                   8, &apos;AUG&apos;,
                   9, &apos;SEP&apos;, 
                 10, &apos;OCT&apos;,
                 11, &apos;NOV&apos;, 
                 12, &apos;DEC&apos;,
                  &apos;&apos;
       ) + &apos;-&apos; +  

TEXT(YEAR( Date__c  ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Received_Date__c</fullName>
        <formula>TEXT( DAY( Received_Date__c) ) + &apos;-&apos; + 

CASE( MONTH( Received_Date__c ) , 
1, &apos;JAN&apos;, 
2, &apos;FEB&apos;, 
3, &apos;MAR&apos;, 
4, &apos;APR&apos;, 
5, &apos;MAY&apos;, 
6, &apos;JUN&apos;, 
7, &apos;JUL&apos;, 
8, &apos;AUG&apos;, 
9, &apos;SEP&apos;, 
10, &apos;OCT&apos;, 
11, &apos;NOV&apos;, 
12, &apos;DEC&apos;, 
&apos;&apos; 
) + &apos;-&apos; + 

TEXT(YEAR(Received_Date__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP Received Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Shipped_Date__c</fullName>
        <formula>TEXT( DAY( Shipped_Date__c) ) + &apos;-&apos; + 

CASE( MONTH( Shipped_Date__c) , 
1, &apos;JAN&apos;, 
2, &apos;FEB&apos;, 
3, &apos;MAR&apos;, 
4, &apos;APR&apos;, 
5, &apos;MAY&apos;, 
6, &apos;JUN&apos;, 
7, &apos;JUL&apos;, 
8, &apos;AUG&apos;, 
9, &apos;SEP&apos;, 
10, &apos;OCT&apos;, 
11, &apos;NOV&apos;, 
12, &apos;DEC&apos;, 
&apos;&apos; 
) + &apos;-&apos; + 

TEXT(YEAR( Shipped_Date__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP Shipped Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FROM_BRANCH__c</fullName>
        <label>FROM BRANCH</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filler1__c</fullName>
        <label>Filler1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filler2__c</fullName>
        <label>Filler2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filler3__c</fullName>
        <label>Filler3</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>For_Service_Center__c</fullName>
        <label>For Service Center</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Org__c</fullName>
        <label>From Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_Invoice_Bill_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Invoice &amp; Bill No.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grand_Total_For_Product_Sale__c</fullName>
        <label>Grand Total For Product Sale</label>
        <summarizedField>Component_Movement_line_Item__c.Total_Amount__c</summarizedField>
        <summaryForeignKey>Component_Movement_line_Item__c.Component_Movement_Table__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Grand_Total__c</fullName>
        <formula>( Amount_1__c  +Amount_2__c+  Amount_3__c + Amount_4__c)+ Vat_Amount__c + Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_No_Trig_No__c</fullName>
        <label>Invoice_No_Trig_No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_No__c</fullName>
        <label>Invoice No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issuing_Service_Center_Address__c</fullName>
        <label>Issuing Service Center Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRN_No_Trig__c</fullName>
        <label>MRN No Trig</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRN_No__c</fullName>
        <externalId>true</externalId>
        <label>MRN No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Misc_Component_Charges__c</fullName>
        <label>Extra Charges</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_Service_Engineer__c</fullName>
        <label>Name of Service Engineer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OPERATING_UNIT_NAME__c</fullName>
        <label>OPERATING UNIT NAME</label>
        <picklist>
            <picklistValues>
                <fullName>SU-KAM POWER SYSTEMS LIMITED</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ORG_ID__c</fullName>
        <label>ORG ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OraFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OraFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ora_Id_2__c</fullName>
        <label>Ora Id 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ora_Id_3__c</fullName>
        <label>Ora Id 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ora_Id_4__c</fullName>
        <label>Ora Id 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ora_Id__c</fullName>
        <label>Ora Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAN_No__c</fullName>
        <formula>CreatedBy.PAN_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PAN No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_No__c</fullName>
        <label>Phone No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>BATTERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INVERTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPONENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOLAR INVERTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOLAR CHARGE CONTROLLER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOLAR PCU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOLAR PRODUCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GENSET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Code_1__c</fullName>
        <label>Product Code 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code_2__c</fullName>
        <label>Product Code 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code_3__c</fullName>
        <label>Product Code 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <picklist>
            <picklistValues>
                <fullName>LA BATTERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMF BATTERY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Rate_Unit_1__c</fullName>
        <inlineHelpText>Price / Unit at which the Item was purchased</inlineHelpText>
        <label>Purchase Rate / Unit 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Rate_Unit_2__c</fullName>
        <label>Purchase Rate / Unit 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Rate_Unit_3__c</fullName>
        <label>Purchase Rate / Unit 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity_2__c</fullName>
        <label>Quantity 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_3__c</fullName>
        <label>Quantity 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_4__c</fullName>
        <label>Quantity 4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Quantity1__c</fullName>
        <label>Received Quantity1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received_Quantity2__c</fullName>
        <label>Received Quantity2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received_Quantity3__c</fullName>
        <label>Received Quantity3</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received_from_Stock_Point__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Received from Stock Point</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>Stock_Point__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Service Engineer</value>
            </filterItems>
            <filterItems>
                <field>Stock_Point__c.Active__c</field>
                <operation>equals</operation>
                <value>true</value>
            </filterItems>
            <filterItems>
                <field>Stock_Point__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Service Center</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Stock_Point__c</referenceTo>
        <relationshipLabel>Components Movement Table</relationshipLabel>
        <relationshipName>Components_Movement_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receiving_Service_Center_Address__c</fullName>
        <label>Receiving Service Center Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Req_No__c</fullName>
        <label>Req No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Road_Permit_No__c</fullName>
        <label>Road Permit No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Road_Permit__c</fullName>
        <label>Road Permit</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SFFLAG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sale_Bill_No__c</fullName>
        <label>Sale Bill No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Bill_Trig_No__c</fullName>
        <label>Sale_Bill_Trig_No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sale_Location_Type__c</fullName>
        <label>Sale Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>Interstate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within State</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sale_Price_Unit__c</fullName>
        <label>Sale Price / Unit 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Select_Component_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Select Component 2</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Components Movement Table (Select Component 2)</relationshipLabel>
        <relationshipName>Components_Movement_Table2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Select_Component_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Select Component 3</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Components Movement Table (Select Component 3)</relationshipLabel>
        <relationshipName>Components_Movement_Table3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Select_Component_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Select Component 4</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Components Movement Table (Select Component 4)</relationshipLabel>
        <relationshipName>Components_Movement_Table4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Select_Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to select any stock type being transacted - component or finished good</inlineHelpText>
        <label>Select Component 1</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Components Movement Table (Select Component 1)</relationshipLabel>
        <relationshipName>Components_Movement_Table1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Engineer_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used in Product Sale</description>
        <label>Service Engineer Assigned</label>
        <referenceTo>Stock_Point__c</referenceTo>
        <relationshipLabel>Components Movement Table (Service Engineer Assigned)</relationshipLabel>
        <relationshipName>Components_Movement_Table2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Engineer_Id__c</fullName>
        <formula>Service_Engineer_Assigned__r.Service_Engineer_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Engineer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Engineer_del__c</fullName>
        <formula>Service_Request__r.Service_Engineer_Name__c</formula>
        <label>Service Engineer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request</label>
        <referenceTo>Service_Request__c</referenceTo>
        <relationshipLabel>Components Movement Table</relationshipLabel>
        <relationshipName>Components_Movement_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <defaultValue>&apos;Other Sales&apos;</defaultValue>
        <label>Service Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipped_Date__c</fullName>
        <label>Shipped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Short_Receipt_Quantity1__c</fullName>
        <formula>Quantity__c - Received_Quantity1__c - Defective_Quantity1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Receipt Quantity1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Receipt_Quantity2__c</fullName>
        <formula>Quantity_2__c - Received_Quantity2__c - Defective_Quantity2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Receipt Quantity2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Receipt_Quantity3__c</fullName>
        <formula>Quantity_3__c - Received_Quantity3__c - Defective_Quantity3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Receipt Quantity3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Branch__c</fullName>
        <label>Source Branch</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_State__c</fullName>
        <label>Source State</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Point_Owner_Id__c</fullName>
        <label>Stock Point Owner Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Point_Type__c</fullName>
        <label>Stock Point Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Point_to_be_Reconciled__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Stock Point to be Reconciled</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>Stock_Point__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Service Engineer</value>
            </filterItems>
            <filterItems>
                <field>Stock_Point__c.Active__c</field>
                <operation>equals</operation>
                <value>true</value>
            </filterItems>
            <filterItems>
                <field>Stock_Point__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Service Center</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Stock_Point__c</referenceTo>
        <relationshipLabel>Components Movement Table (Stock Point to be Reconciled)</relationshipLabel>
        <relationshipName>Components_Movement_Table1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stock_Transfer_Price_Unit_1__c</fullName>
        <label>Stock Transfer Price / Unit 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stock_Transfer_Price_Unit_2__c</fullName>
        <label>Stock Transfer Price / Unit 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stock_Transfer_Price_Unit_3__c</fullName>
        <label>Stock Transfer Price / Unit 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stock_Transfer_Sl_No_Trig__c</fullName>
        <label>Stock Transfer Sl No Trig</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Transfer_Sl_No__c</fullName>
        <externalId>true</externalId>
        <label>Stock Transfer Sl No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Transfer_Status__c</fullName>
        <label>Stock Transfer Status</label>
        <picklist>
            <picklistValues>
                <fullName>Outward Movement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Transit</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stock_Transfer_Total__c</fullName>
        <formula>Amount_1__c  +  Amount_2__c  +  Amount_3__c  +  Amount_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock Transfer Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TIN_NO__c</fullName>
        <formula>CreatedBy.TIN_NO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TIN NO.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <formula>(Amount_1__c + Amount_2__c+  Amount_3__c+  Amount_4__c )* Tax_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Percentage__c</fullName>
        <label>Tax Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>(Amount_1__c  +Amount_2__c+  Amount_3__c + Amount_4__c)+ Discount_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Defective__c</fullName>
        <formula>(Defective_Amount1__c + Defective_Amount2__c + Defective_Amount3__c + Defective_Amount4__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total (Defective)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>